--- a/templates/game.html
+++ b/templates/game.html
@@ -4,6 +4,7 @@
     <title>Mindle</title>
     {% load static %}
     <link rel="stylesheet" href="/static/css/style_Game.css"/>
+    <link rel="icon" href="../static/css/imagenes/cebero.ico" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
@@ -20,7 +21,7 @@
     <div class="Centrado">
         <div class="rounded-box">
             <header>
-                <h1>Ingresa un trastorno mental</h1>
+                <h1>Ingresa el diagnónstico del día</h1>
             </header>
             <main>
                 <div class="game-container">
@@ -28,7 +29,11 @@
                     <br>
                     <form method="POST">
                         {% csrf_token %}
-                        {{ form.as_p }}
+                        <div class="form-group">
+                        <!-- Cambia el texto dentro de la etiqueta -->
+                        <label for="{{ form.inputTrastorno.id_for_label }}" class="form-label"></label>
+                            {{ form.inputTrastorno }} <!-- Aquí se mantiene el campo de entrada -->
+                        </div>
                         <button class="button" type="submit">Comprobar</button>
                     </form>
                     
@@ -39,7 +44,7 @@
                     {% endfor %}
                     <!-- <p>{{ resultado }}</p> -->
                     {% else %}
-                    
+
                     
                     {% endif %}
                     <div class="attempts">
@@ -49,6 +54,9 @@
                 </div>
                 
             </main>
+            <footer>
+                <p>Hecho con pasión sansana</p>
+            </footer>
         </div>
     </div>    
     <div class="modal fade" id="successModal" tabindex="-1" aria-labelledby="successModalLabel" aria-hidden="true">
@@ -59,8 +67,15 @@
                         ganaste en {{ intentos }} intentos
                     </h5>
                 </div>
-                <div class="modal-body">
-                    Has acertado el trastorno. ¡Bien hecho!
+                <div class="modal-body" style="text-align: center;">
+                    <span style="font-size: 20px; font-style: bold;" id="highlight">Has acertado ¡Bien hecho!</span>
+                    <!--<p style="font-size: 20px; font-style: bold;">Has acertado ¡Bien hecho!</p>-->
+                    <br>
+                    <p style="font-size: 20px;">El diagnóstico del día era:  {{ cTrastorno }}  </p>
+                    <br>
+                    <p style="font-size: 20px;">Una breve descripción: {{ dTrastorno }}  </p>
+                    <br>
+
                 </div>
                 <div class="modal-footer">
                     <a href="../" class="btn btn-success">Continuar</a>
@@ -77,6 +92,68 @@
         // Solo mostrar la modal si `mostrar_modal` es True
         const successModal = new bootstrap.Modal(document.getElementById('successModal'));
         successModal.show();
+
+        // ********** cambia aquí
+        var text = "texto arcoiris" // tu texto
+            var speed = 80 // velocidad de movimiento 
+
+
+            if (document.all || document.getElementById) {
+                document.write('<span id="highlight">' + text + '</span>')
+                var storetext = document.getElementById ? document.getElementById("highlight") : document.all.highlight
+            } else
+                document.write(text)
+            var hex = new Array("00", "14", "28", "3C", "50", "64", "78", "8C", "A0", "B4", "C8", "DC", "F0")
+            var r = 1
+            var g = 1
+            var b = 1
+            var seq = 1
+
+            function changetext() {
+                rainbow = "#" + hex[r] + hex[g] + hex[b]
+                storetext.style.color = rainbow
+            }
+
+            function change() {
+                if (seq == 6) {
+                    b--
+                    if (b == 0)
+                        seq = 1
+                }
+                if (seq == 5) {
+                    r++
+                    if (r == 12)
+                        seq = 6
+                }
+                if (seq == 4) {
+                    g--
+                    if (g == 0)
+                        seq = 5
+                }
+                if (seq == 3) {
+                    b++
+                    if (b == 12)
+                        seq = 4
+                }
+                if (seq == 2) {
+                    r--
+                    if (r == 0)
+                        seq = 3
+                }
+                if (seq == 1) {
+                    g++
+                    if (g == 12)
+                        seq = 2
+                }
+                changetext()
+            }
+
+            function starteffect() {
+                if (document.all || document.getElementById)
+                    flash = setInterval("change()", speed)
+            }
+            starteffect();
+
     </script>
     {% endif %}
 </body>
