--- a/templates/index.html
+++ b/templates/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>Mindle</title>
     {% load static %}
+    <link rel="icon" href="../static/css/imagenes/cebero.ico" type="image/x-icon">
     <link rel="stylesheet" href="static/css/style.css" />
 </head>
 <body>
