--- a/templates/registrarse.html
+++ b/templates/registrarse.html
@@ -2,7 +2,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Regístrate en Mindle</title>
+    <title>Mindle</title>
+    <link rel="icon" href="../static/css/imagenes/cebero.ico" type="image/x-icon">
     <link rel="stylesheet" href="{% static 'css/styleRegistrarse.css' %}">
 </head>
 <body>
@@ -23,7 +24,7 @@
             <button class="button" type="submit">Registrarse</button>
         </form>
         <p>¿Ya tienes una cuenta?</p>
-        <a href="/login">Iniciar sesión</a>
+        <a href="/usuarios/login">Iniciar sesión</a>
     </div>    
 </body>
 </html>
