--- a/templates/diccionarioprueba.html
+++ b/templates/diccionarioprueba.html
@@ -2,6 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" href="../static/css/imagenes/cebero.ico" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Diccionario de Diagnósticos</title>
     <style>
