--- a/templates/inicioDeSesion.html
+++ b/templates/inicioDeSesion.html
@@ -1,9 +1,10 @@
 {% load static %}
 <!DOCTYPE html>
 <html >
-<head>      
-    
-    <title>Bienvenido a Mindle</title>
+    <head>      
+        
+    <title>Mindle</title>
+    <link rel="icon" href="../static/css/imagenes/cebero.ico" type="image/x-icon">
     <link rel="stylesheet" href="{% static 'css/styleInicioDeSesion.css' %}" />
 </head>
 <body>
